update core-ng to latest version